Corrected grid alignment

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -2,9 +2,8 @@
         background: #E8E8E8;
 
 }
-.body-content {
-    margin: 20px 0;
-    padding: 0;
+.body-content {    
+    margin-left: 100px;
     background: #f5f5f5;
     font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
     font-size: 11px;
